# rcsp

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: DESIGN.md  EXAMPLES.md  REALTIME.md
examples/: e1_basic.py  e2_timer_state.py  e3_bid_ask.py  e4_realtime.py  e5_dataframes.py  e6_persist_all.py  e7_native_realtime.py  e8_multi_symbol_vwap.py
examples/csp_ports/: README.md
examples/csp_ports/01_basics/: e2_ticking.py  e3_show_graph.py  e4_trade_pnl.py
examples/csp_ports/02_intermediate/: e1_feedback.py  e2_stats.py  e3_numpy_stats.py
examples/csp_ports/04_writing_adapters/: e1_generic_push_adapter.py  e2_pullinput.py  e3_adaptermanager_pullinput.py
examples/csp_ports/06_advanced/: e1_dynamic.py
examples/csp_ports/07_end_to_end/: README.md  earthquake.py  mta.py  seismic.py  wikimedia.py
examples/csp_ports/98_just_for_fun/: e1_csp_nand_computer.py
examples/spy_basket/: README.md  basket_arb.py  sp500_weights.csv  spy_basket.ipynb
python/rcsp/: __init__.py  _adapters.py  _baselib.py  _bench.py  _dynamic.py  _graph.py  _interop.py  _io.py  _kafka.py  _node.py  _persist.py  _probe.py  _profiler.py  _run.py  _types.py  _viz.py  stats.py
scripts/: setup_env.sh
src/: lib.rs
tests/: test_advanced.py  test_basket_arb.py  test_dataframe.py  test_dynamic.py  test_end_to_end.py  test_engine.py  test_features.py  test_kafka.py  test_multi_symbol_vwap.py  test_native_bench.py  test_native_executor.py  test_persist.py  test_producer.py  test_realtime_latency.py  test_stats.py  test_viz.py
(+3 files in other folders)
